# finalfinalproject

./: README.md  pyproject.toml  python final project presentaion.pptx  working_code-f.py
sub-01/ses-01/eeg/: sub-01_ses-01_task-musicTherapy_eeg.json  sub-01_ses-01_task-postMusicTherapy_eeg.json  sub-01_ses-01_task-preMusicTherapy_eeg.json
sub-01/ses-02/eeg/: sub-01_ses-02_task-musicTherapy_eeg.json  sub-01_ses-02_task-postMusicTherapy_eeg.edf  sub-01_ses-02_task-postMusicTherapy_eeg.json  sub-01_ses-02_task-preMusicTherapy_eeg.json
sub-02/ses-01/eeg/: sub-02_ses-01_task-musicTherapy_eeg.json  sub-02_ses-01_task-postMusicTherapy_eeg.edf  sub-02_ses-01_task-postMusicTherapy_eeg.json  sub-02_ses-01_task-preMusicTherapy_eeg.json
sub-02/ses-02/eeg/: sub-02_ses-02_task-musicTherapy_eeg.json  sub-02_ses-02_task-postMusicTherapy_eeg.edf  sub-02_ses-02_task-postMusicTherapy_eeg.json  sub-02_ses-02_task-preMusicTherapy_eeg.json
sub-03/ses-01/eeg/: sub-03_ses-01_task-musicTherapy_eeg.json  sub-03_ses-01_task-postMusicTherapy_eeg.json  sub-03_ses-01_task-preMusicTherapy_eeg.json
sub-03/ses-02/eeg/: sub-03_ses-02_task-musicTherapy_eeg.json  sub-03_ses-02_task-postMusicTherapy_eeg.json  sub-03_ses-02_task-preMusicTherapy_eeg.json
sub-04/ses-01/eeg/: sub-04_ses-01_task-musicTherapy_eeg.json  sub-04_ses-01_task-postMusicTherapy_eeg.edf  sub-04_ses-01_task-postMusicTherapy_eeg.json  sub-04_ses-01_task-preMusicTherapy_eeg.json
sub-04/ses-02/eeg/: sub-04_ses-02_task-musicTherapy_eeg.json  sub-04_ses-02_task-postMusicTherapy_eeg.json  sub-04_ses-02_task-preMusicTherapy_eeg.json
sub-05/ses-01/eeg/: sub-05_ses-01_task-musicTherapy_eeg.json  sub-05_ses-01_task-postMusicTherapy_eeg.json  sub-05_ses-01_task-preMusicTherapy_eeg.json
sub-05/ses-02/eeg/: sub-05_ses-02_task-musicTherapy_eeg.json  sub-05_ses-02_task-postMusicTherapy_eeg.json  sub-05_ses-02_task-preMusicTherapy_eeg.json
sub-06/ses-01/eeg/: sub-06_ses-01_task-musicTherapy_eeg.json  sub-06_ses-01_task-postMusicTherapy_eeg.json  sub-06_ses-01_task-preMusicTherapy_eeg.json
sub-06/ses-02/eeg/: sub-06_ses-02_task-musicTherapy_eeg.json  sub-06_ses-02_task-postMusicTherapy_eeg.json  (+1 more)
tests/: test_alpha_power.py  test_creat.py  test_load.py  test_plot.py  test_ttest.py
(+12 files in other folders)
